# clothes-changer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  database.db-shm  database.db-wal  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
clothes_changer/: config.py  constants.py  content_config.py  main.py
clothes_changer/db/: database.py
clothes_changer/ml/: checkpoints.py  gpu_memory.py  inpainter.py  network.py  onnx_runtime.py  pipeline.py  pipeline_debug.py  pose.py  process.py  segmentation.py  segmentor.py
clothes_changer/schemas/: __init__.py
clothes_changer/scripts/: download_models.py
clothes_changer/ui/: constants.py  editor_session.py  gradio_app.py  masks.py
clothes_changer/utils/: __init__.py  image.py  logging.py
config/: content.default.yaml  content.local.yaml.example
docker/: fix-ort-gpu.sh
outfit_studio/: __init__.py  config.py  constants.py  content_config.py  main.py
outfit_studio/auth/: __init__.py  app.py  routes.py  security.py  session.py
outfit_studio/auth/templates/: login.css
outfit_studio/db/: database.py  schemas.py
outfit_studio/ml/: __init__.py  checkpoints.py  compile_cache.py  gpu_memory.py  inpainter.py  mask_postprocess.py  onnx_runtime.py  parser_labels.py  pipeline.py  pipeline_debug.py  pose.py  process.py  segmentation.py  segmentation_workflow.py  segmentor.py
outfit_studio/scripts/: add_user.py  benchmark_steps.py  download_models.py
outfit_studio/ui/: editor_session.py  gradio_app.py  header.py  launch.py  masks.py  operation_control.py  theme.py
outfit_studio/ui/handlers/: __init__.py  admin.py  generation.py  history.py  images.py  operations.py  segmentation.py  session.py
outfit_studio/ui/tabs/: __init__.py  events.py  layout.py
outfit_studio/utils/: __init__.py  hand_mask.py  image.py  logging.py
scripts/: add_user.py  install-cuda.ps1  setup.ps1  test_hand_pipeline_ab.py
tests/: conftest.py  test_auth.py  test_checkpoints.py  test_compile_cache.py  test_content_config.py  test_editor_session.py  test_gpu_memory.py  test_gradio_app.py  test_hand_mask.py  test_image_utils.py  test_inpainter.py  test_log_level.py  test_logging_console.py  test_mask_postprocess.py  test_masks.py  test_operation_control.py  test_parser_labels.py  test_pipeline_debug.py  test_security_auth.py  test_segmentation.py
