[project]
name = "clothes-changer"
version = "1.0.0"
description = "AI outfit inpainting — segment clothing and inpaint new outfits"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio>=4.44.0,<6.0",
    "gradio-imageslider>=0.0.20",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0,<2.2.0",
    "opencv-python-headless>=4.10.0",
    "scikit-image>=0.24.0",
    "scipy>=1.11.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "diffusers>=0.32.0",
    "transformers>=4.49.0,<5.6",
    "accelerate>=1.4.0",
    "matplotlib>=3.8.0",
    "safetensors>=0.5.0",
    "rtmlib>=0.0.15",
    "onnxruntime>=1.19.0,<1.24.0",
    "requests>=2.32.0",
    "tqdm>=4.65.0",
    "gdown>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[project.scripts]
clothes-changer = "clothes_changer.main:main"
clothes-changer-download-models = "clothes_changer.scripts.download_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clothes_changer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: downloads ML models (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"clothes_changer/main.py" = ["E402"]
