[project]
name = "outfit-studio"
version = "1.0.0"
description = "AI outfit inpainting — segment clothing and inpaint new outfits"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio==4.42.0",
    "gradio-imageslider==0.0.20",
    "gradio-client==1.3.0",
    "huggingface-hub>=0.27.1,<1.0",
    "pydantic==2.10.6",
    "pydantic-settings>=2.6.0,<2.8",
    "argon2-cffi>=23.1.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0,<11.0",
    "numpy>=1.26.0,<2.2.0",
    "opencv-python-headless>=4.10.0",
    "scikit-image>=0.24.0",
    "scipy>=1.11.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "diffusers==0.32.2",
    "transformers==4.49.0",
    "safetensors>=0.5.0",
    "rtmlib>=0.0.15",
    "onnxruntime-gpu>=1.19.0,<1.24.0; sys_platform == 'linux'",
    "onnxruntime>=1.19.0,<1.24.0; sys_platform != 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cudnn-cu12; sys_platform == 'linux'",
    "nvidia-cufft-cu12; sys_platform == 'linux'",
    "nvidia-curand-cu12; sys_platform == 'linux'",
    "nvidia-cusolver-cu12; sys_platform == 'linux'",
    "nvidia-cusparse-cu12; sys_platform == 'linux'",
    "requests>=2.32.0",
    "tqdm>=4.65.0",
    "gdown>=5.0.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
outfit-studio = "outfit_studio.main:main"
outfit-studio-download-models = "outfit_studio.scripts.download_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outfit_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: downloads ML models (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"outfit_studio/main.py" = ["E402"]
"scripts/*.py" = ["E402"]
"outfit_studio/auth/routes.py" = ["E501"]
