[project]
name = "outfit-studio"
version = "1.0.0"
description = "AI outfit inpainting — segment clothing and inpaint new outfits"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio==4.42.0",
    "gradio-imageslider==0.0.20",
    "gradio-client==1.3.0",
    "huggingface-hub==0.36.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "argon2-cffi==25.1.0",
    "pyyaml==6.0.3",
    "pillow==10.4.0",
    "numpy==2.1.3",
    "opencv-python-headless==4.13.0.92",
    "scikit-image==0.25.2; python_version < '3.11'",
    "scikit-image==0.26.0; python_version >= '3.11'",
    "scipy==1.15.3; python_version < '3.11'",
    "scipy==1.17.1; python_version == '3.11.*'",
    "scipy==1.18.0; python_version >= '3.12'",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "diffusers==0.32.2",
    "transformers==4.49.0",
    "safetensors==0.8.0",
    "rtmlib==0.0.15",
    "onnxruntime-gpu==1.23.2; sys_platform == 'linux'",
    "onnxruntime==1.23.2; sys_platform != 'linux'",
    "nvidia-cublas-cu12==12.9.2.10; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.9.79; sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.23.2.1; sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.4.1.4; sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.10.19; sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.5.82; sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.10.65; sys_platform == 'linux'",
    "requests==2.34.2",
    "tqdm==4.68.3",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.19",
]

[project.scripts]
outfit-studio = "outfit_studio.main:main"
outfit-studio-download-models = "outfit_studio.scripts.download_models:main"
outfit-studio-add-user = "outfit_studio.scripts.add_user:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["outfit_studio"]

[tool.uv]
override-dependencies = [
    "onnxruntime-gpu==1.23.2; sys_platform == 'linux'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: downloads ML models (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"outfit_studio/main.py" = ["E402"]
"outfit_studio/auth/routes.py" = ["E501"]
